--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ng-select/ng-select": "^12.0.6",
     "@tailwindcss/forms": "^0.5.7",
     "angularx-flatpickr": "^7.3.0",
+    "apexcharts": "^3.54.1",
     "autoprefixer": "^10.4.17",
     "date-fns": "^3.3.1",
     "firebase": "^10.7.1",
